@startuml database_erd_hybrid
!theme plain
skinparam backgroundColor #FEFEFE
skinparam shadowing false
skinparam linetype polyline

' ===================================================
' ENTITY RELATIONSHIP DIAGRAM - HYBRID SYSTEM
' Template: Simple table style (like reference image)
' ===================================================

skinparam class {
    BackgroundColor #E3F2FD
    BorderColor #1976D2
    ArrowColor #1976D2
}

' ===================================================
' CORE STOCK DATA (Existing - simplified)
' ===================================================

entity information {
    **ticker
    ---
    exchange
    company_name
    industry
    website
}

entity stock_prices_1d {
    ⏰ time
    **ticker
    ---
    open
    high
    low
    close
    volume
    ma5
    ma10
    ma20
    ma50
    rsi
    macd_main
    macd_signal
}

entity alert {
    ⚷ id
    ---
    **ticker
    user_id
    alert_type
    condition
    price_value
    is_active
    created_at
    user_name
}

entity subscribe {
    ⚷ id
    ---
    user_id
    **ticker
    ◎ created_at
    user_name
}

' ===================================================
' NEW TABLES - HYBRID MULTI-MODEL SYSTEM
' ===================================================

entity sessions {
    **session_id
    ---
    user_id
    user_name
    authenticated
    created_at
    expires_at
    last_active
    metadata
}

entity user_preferences {
    **user_id
    ---
    user_name
    risk_tolerance
    investment_horizon
    capital
    preferred_sectors
    excluded_sectors
    max_single_stock_allocation
    enable_ai_suggestions
    created_at
    updated_at
}

entity ai_usage_logs {
    ⚷ id
    ---
    user_id
    user_name
    use_case
    agent_name
    model_name
    task_description
    input_tokens
    output_tokens
    cost_usd
    execution_time_ms
    success
    created_at
}

entity portfolios {
    ⚷ id
    ---
    **user_id
    user_name
    name
    description
    tickers
    allocations
    total_value
    risk_level
    expected_return
    created_by_ai_model
    ai_reasoning
    is_active
    created_at
}

entity query_cache {
    **cache_key
    ---
    query_type
    cached_data
    created_at
    expires_at
    hit_count
    last_accessed
}

' ===================================================
' RELATIONSHIPS
' ===================================================

' Stock data relationships
' Note: stock_prices_1d không có FK (hypertable), chỉ là logical relationship
information ||..o{ stock_prices_1d : "logical: ticker"

' Alert có FK constraint
information ||--o{ alert : "FK: ticker"

' Subscribe KHÔNG có FK (allow any ticker)
subscribe }o..|| information : "no FK: ticker"

' Hybrid system - NO foreign keys (all logical)
user_preferences ||..o{ portfolios : "logical: user_id"
user_preferences ||..o{ ai_usage_logs : "logical: user_id"
sessions ||..o{ ai_usage_logs : "logical: user_id"

@enduml
